<resources>
    <string name="app_name">mPamanech</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="powered">Powered By APHRC</string>
    <string name="generic_server_down">Sorry, Request Couldn\'t Be Completed</string>
    <string name="generic_error">Network Error</string>
    <string name="connection">No Network Connection</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_form100">Community Referral Form</string>
    <string name="new_513">New 513</string>
    <string name="pick_time">Pick date</string>
    <string name="Swelling_hands">Swelling in the hands?</string>
    <string name="convulsions">Convulsions or fits?</string>
    <string name="Breathing">Difficulty breathing</string>
    <string name="Urination">Painful urination?</string>
    <string name="pale_pams">Very pale palms of hands or nail beds?</string>
    <string name="genital_ulcers">Genital ulcer?</string>
    <string name="fever_chills">Fever with chills?</string>
    <string name="fever_nochills">Fever without chills?</string>
    <string name="placenta">Placenta not delivered in 30 minutes?</string>
    <string name="section_one">Section One</string>
    <string name="section_two">Section two</string>
    <string name="section_three">Section Three</string>
    <string name="section_four">Section Four</string>
    <string name="section_five">Section Five</string>
    <string name="section_six">Section Six</string>
    <string name="pregnant_mothers">Pregnant Mothers</string>
    <string name="postmothers">Post Partum Mothers</string>
    <string name="not_breathing">Not breathing</string>
    <string name="yellow_skin">Skin yellow in color?</string>
    <string name="feet_blue">Skin on palms and soles of feet are blue?</string>
    <string name="not_sucking">Unable to suck?</string>
    <string name="category_selector">Options :</string>
    <string name="child">Child</string>
    <string name="mother">Mother</string>
    <string name="postpartum">Post-Partum Mothers</string>
    <string name="not_suckingOrPoor">Unable to suck or poor sucking?</string>
    <string name="constipation">Diarrhea/constipation?</string>
    <string name="eye_discharge">Red swollen eyes with discharge?</string>
    <string name="cord_discharge">Redness and discharge around the cord?</string>
    <string name="atBirth">First seven days (0 - 7 days)</string>
    <string name="sevenDays">First seven days</string>
    <string name="first_seven_days">First seven days</string>
    <string name="days">Days</string>
    <string name="form_place">Place of Visit</string>
    <string name="house_member_name">Fullname + name of CHV</string>
    <string name="fullyImmunized">Fully Immunized</string>
    <string name="vitaminAGiven">Vitamin A given</string>
    <string name="severelyMalnutritioned">Severely Malnourished (MUAC indicating Yellow)</string>
    <string name="moderatelyMalnourished">Moderately Malnourished (MUAC indicating Yellow)</string>
    <string name="knownChronic">Known chronic illness</string>
    <string name="knowsHIVStatus">Known HIV Status</string>
    <string name="household_indicators">Household Level Indicators</string>
    <string name="individual_indicators">Individual Level Indicators</string>
    <string name="individual_details">Individual Details</string>
    <string name="deaths">Deaths</string>
    <string name="safe_water">Access to safe water</string>
    <string name="treated_water">Use of treated water</string>
    <string name="washing_facilities">Hand washing facilities</string>
    <string name="latrine">Latrine</string>
    <string name="disposal">Functional Latrine</string>
    <string name="date_death">Date of Death</string>
    <string name="individual_code">Individual code</string>
    <string name="nameOfMember">Name of household member</string>
    <string name="comment">Comments</string>
    <string name="r_toHHH">This should be recorded using the key provided i.e. 1 for Household head, 2 for spouse, 3 for Child by Birth, 4 for Child by Registration, 5 for grand  child , 6  for brother or sister, and  7 for others</string>
    <string name="r_orpan">Record by marking a tick (✔ )  when household member is an orphan.  Record (X) if the household member is not an orphan. An orphan is someone with one or both parents dead, and less than 18 years old. Record N/A if member is over 18 years</string>
    <string name="r_birthCertificate">Record by marking a tick (✔)  when household member has a birth certificate. Record (X) if the household member does not have a birth certificate</string>
    <string name="r_school">Record by marking a tick (✔)  when the household member is in school , or (X) when the household member  is not going to school. The indicator refers to children of school age (for primary education). This is the age of 6-18 years (Ministry of Education of Kenya). Record N/A if member is below 6 years or over 18 years of age</string>
    <string name="r_pregnant">Record  by  Indicating  with a tick (✔) whether a household female member is  pregnant or (X) if the household female member is  not pregnant. The CHV should observe or ask the woman in the household. Record N/A if member is male</string>
    <string name="r_anc">Record by marking with a tick (✔)  if a household member who is a mother of a child  of 0-11 months completed at least 4 Ante Natal Clinic (ANC) visits during the pregnancy period or mark with a (X) if a household member who is a mother of a child  of 0-11 months did not complete at least 4 Ante Natal Clinic (ANC) visits during the pregnancy period. Record N/A if member is not a mother of a child of 0-11 months</string>
    <string name="r_booklet">Record with a tick (✔)  if the  household member has been issued  with  a mother and  Child  Health  booklet. Record (X) if the  household member has not been issued. Record N/A if member is not a pregnant mother or child of 0-59 months</string>
    <string name="r_attendant">Record   by marking with a tick (✔ )  if delivery within the past 6 months was  through  a Skilled Birth Attendant or  (X) if delivery within the past 6 months was not through a Skilled Birth Attendant.Note that traditional birth attendants (TBA) are not considered Skilled Birth Attendants. Record N/A if a female member did not give birth over the past 6 months or  the member is a male or a child</string>
    <string name="r_feeding">Record by marking a tick (✔ )  when the child in the household is less than 6 months and is exclusively breastfed, or (X) when the child who is less than 6 months in the household is not exclusively breastfed. Record N/A if member is not a child of 0-6 months</string>
    <string name="r_planning">Record  one of the provided numbers i.e. 1 for Modern, 2 for Traditional/ Natural, 3 for None to indicate  the family  planning   method  used. This applies to women of reproductive age (15-49 years). Record 4 for N/A if member is not a woman of reproductive age</string>
    <string name="r_penta1">Record by marking a tick (✔ )  when a child aged 6 weeks -11 months in the household was given Penta1 or (X) if the child was not given Penta1. Record N/A if member is not a child aged 6 weeks -11 months</string>
    <string name="r_penta3">Record by marking a tick (✔ )  when a child aged 14 weeks-11 months in the household was given Penta 3 or (X) if the child was not given Penta 3. Record N/A if member is not a child aged 14 weeks -11 months</string>
    <string name="r_measles">Record by marking a tick (✔ )  when a child of  9-18 months age in the household was given Measles vaccination or (X) if the child was not given  Measles vaccination. Record N/A if the member is not a child aged 9 -18 months</string>
    <string name="r_immunized">Record by marking a tick (✔ )  when a child of  9-11 months of age in the household was given ALL vaccinations required or (X) if the child was not given ALL vaccinations required. Record N/A if member is not a child aged 9 -11 months</string>
    <string name="r_vitamin">Record by marking a tick (✔ ) when the child 6-59 months in the household was given Vitamin A in the last 6 months or (X) if the child was not given Vitamin A in the last 6 months. Record N/A if member is not a child aged 6-59 months</string>
    <string name="r_children">Record by marking a tick (✔ )  when the child in the household aged 6-23 months  receives 3 or more food  groups  per  day or  (X) if the child does not receive 3 or more food  groups  per  day. Ask what food the child was given  over the past 24 hours and determine the food groups in the food provided. Ask question where there are children of less than 24 months of age.  Record N/A if member is not a child aged 6-23 months</string>
    <string name="r_malnourished">Record by marking a tick (✔ )  when the household child\'s (6-59 months age) mid upper circumference (MUAC) is red or (X) when the child has MUAC that is  not red. Record N/A if member is not a child aged 6-59 months</string>
    <string name="r_mMalnourished">Record by marking a tick (✔ )  when the household child\'s (6-59 months age) mid upper circumference (MUAC) is yellow or (X) when the child has MUAC that is not yellow. Record N/A if member is not a child aged 6-59 months</string>
    <string name="r_llin">Record by marking with tick (✔ )  whether the household member slept under a Long Lasting  Insecticide Net (LLIN) the night before or  (X) when the household member did not sleep under LLIN the night before.</string>
    <string name="r_illness">Record one or more of the  numbered illnesses  for  any  known chronic illness  observed: 0-None, 1=Diabetes, 2=Cancer, 3=Mental Illness, 4=Hypertension, 5=Chronic Respiratory Diseases, 6=Other. It is a chronic illness if someone has had a diagnosed illness for 1 year or more without healing</string>
    <string name="tiredness">Tiredness</string>
    <string name="always_sleepy">Always seems sleepy</string>
    <string name="fast_breathing">Fast breathing ( 60 breaths or more in 1 minute count )</string>
    <string name="chest_drawing">Chest in drawing</string>
    <string name="loosing_weight">Baby loosing excessive weight</string>
    <string name="yellow_soles">Yellow soles</string>
    <string name="first_seven_day">First 28 days</string>
    <string name="seven28Days">First 28 days</string>
    <string name="patient">Patient name</string>
    <string name="patient_num">Patient Number</string>
    <string name="message_clinician">Message from clinician</string>
    <string name="other_facility">Other health facility</string>
    <string name="message_back">Respond after follow up</string>
    <string name="message_from_health">Message from the health facility</string>
    <string name="patientAge">Patients Age</string>
    <string name="patient_reg">Registration ID/ Mobile</string>
    <string name="Instuct">INSTRUCTIONS</string>
    <string name="stage">Patients status</string>
    <string-array name="start_feeding">
        <item>Select option</item>
        <item>Immediately/ less than 30 minutes</item>
        <item>30 minutes to 1 hour</item>
        <item>More than 1 hour</item>
        <item>Don’t Know</item>
        <item>Never</item>
    </string-array>
    <string-array name="fed_birth">
        <item>Select option</item>
        <item>Breast milk only</item>
        <item>Breast milk and plain water</item>
        <item>Breast milk and water (with salt and sugar/ glucose solution)</item>
        <item>Others ( solids food, dairy, other liquids)</item>
    </string-array>
    <string name="child_fed">Yesterday (throughout the day and night) what was the child fed on</string>
    <string name="breastfeeding">Breastfeeding history</string>
</resources>