<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dewcis.mdss.RecommendationView"
    android:scrollbars="none"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/myTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@color/primary_dark"
            android:padding="4dp"
            android:text="@string/Instuct"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView android:text="Patients name" style="@style/spinner_label" android:contentDescription=""/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/patient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient"
            android:textColor="#999999"
            />

        <TextView android:text="Patients Age" style="@style/spinner_label" android:contentDescription=""/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/patient_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patientAge"
            />

        <TextView android:text="Patients Registration ID / Mobile Number" style="@style/spinner_label" android:contentDescription=""/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/patient_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_reg"
            />

        <TextView android:text="Patients Status" style="@style/spinner_label" android:contentDescription=""/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/patient_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stage"
            />

        <TextView android:text="Patients Community Unit" style="@style/spinner_label" android:contentDescription=""/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/community"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/community_unit_name"
            android:textColor="#999999"
            />

        <TextView android:text="Referral facility" style="@style/spinner_label" android:contentDescription=""/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/other_facility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/other_facility"
            />

        <TextView android:text="Health Worker Instruction" android:id="@+id/actions" style="@style/spinner_label" android:contentDescription=""/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/message_clinician"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_clinician"
            android:gravity="top|left"
            android:scrollbars="vertical"
            android:maxLines="10"
            android:lines="6"
            />

        <TextView android:text="Actions taken"  style="@style/spinner_label" android:contentDescription=""/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/message_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_back"
            android:gravity="top|left"
            android:scrollbars="vertical"
            android:maxLines="10"
            android:lines="6"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="send"
            android:onClick="sendStat"
            />

    </LinearLayout>


</ScrollView>
